--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
     "tsconfig-paths": "^3.8.0",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.14.0",
+    "tslint-eslint-rules": "^5.4.0",
+    "tslint-react": "^3.6.0",
+    "tslint-react-recommended": "^1.0.15",
     "typescript": "^3.3.3333"
   }
 }
