--- a/package.json
+++ b/package.json
@@ -37,17 +37,20 @@
   "devDependencies": {
     "@types/auto-bind": "^1.2.0",
     "@types/enzyme": "^3.9.0",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
     "auto-bind": "^2.0.0",
     "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.11.2",
     "jest": "^24.5.0",
     "jest-summary-reporter": "0.0.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "ts-jest": "^24.0.0",
     "tsconfig-paths": "^3.8.0",
+    "tsconfig-paths-jest": "0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
     "tslint": "^5.14.0",
     "tslint-eslint-rules": "^5.4.0",
