--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "build/index.js",
   "scripts": {
     "test": "jest",
-    "lint": "tslint -p ./tsconfig.json"
+    "lint": "tslint -p ./tsconfig.json",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -49,7 +50,9 @@
     "jest-summary-reporter": "0.0.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "source-map-loader": "^0.2.4",
     "ts-jest": "^24.0.0",
+    "ts-loader": "^5.3.3",
     "tsconfig-paths": "^3.8.0",
     "tsconfig-paths-jest": "0.0.1",
     "tsconfig-paths-webpack-plugin": "^3.2.0",
@@ -57,6 +60,9 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
     "tslint-react-recommended": "^1.0.15",
-    "typescript": "^3.3.3333"
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.6",
+    "webpack-bundle-analyzer": "^3.1.0",
+    "webpack-cli": "^3.3.0"
   }
 }
