--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "A React wrapper for the window-modal package",
   "main": "build/index.js",
+  "types": "build/src/index.d.ts",
   "scripts": {
     "test": "jest",
     "lint": "tslint -p ./tsconfig.json",
