--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "module": "es6",
         "lib": ["es2017", "dom"],
         "declaration": true,
-        "sourceMap": true,
+        "sourceMap": false,
         "outDir": "./build",
         "jsx": "react",
         "esModuleInterop": true,
