--- a/package.json
+++ b/package.json
@@ -40,20 +40,19 @@
     "react-dom": "^16.8.4"
   },
   "devDependencies": {
-    "window-modal": "0.0.16",
     "@types/auto-bind": "^1.2.0",
     "@types/enzyme": "^3.9.0",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/jest": "^24.0.11",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
     "auto-bind": "^2.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.11.2",
     "jest": "^24.5.0",
     "jest-summary-reporter": "0.0.2",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "source-map-loader": "^0.2.4",
     "ts-jest": "^24.0.0",
     "ts-loader": "^5.3.3",
@@ -67,6 +66,7 @@
     "typescript": "^3.3.3333",
     "webpack": "^4.29.6",
     "webpack-bundle-analyzer": "^3.1.0",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "window-modal": "0.0.17"
   }
 }
